# Proiect_POO

./: CMakeLists.txt  Source.cpp  comanda.cpp  comanda.h  dish.cpp  dish.h  dish_factory.cpp  dish_factory.h  exceptii.cpp  exceptii.h  persoana.cpp  persoana.h  persoana_fizica.cpp  persoana_fizica.h  persoana_juridica.cpp  persoana_juridica.h  restaurant.cpp  restaurant.h  sofer.cpp  sofer.h  sofer_builder.cpp  sofer_builder.h  template.cpp  template.h  user.cpp  user.h
.github/workflows/: cmake.yml
